수강편람 업데이트 2013-1

--- a/data/htm/2013_1_basics_korean.htm
+++ b/data/htm/2013_1_basics_korean.htm
@@ -1587,9 +1587,9 @@
 <td class="pstyle2">대학국어&nbsp;</td>
 <td class="pstyle2">교양&nbsp;</td>
 <td class="pstyle2">3-2-2&nbsp;</td>
-<td class="pstyle2">화&nbsp;4.5,5.5&nbsp;</td>
+<td class="pstyle2">월&nbsp;1,2&nbsp;</td>
 <td class="pstyle2">이론&nbsp;</td>
-<td class="pstyle2">220-201&nbsp;</td>
+<td class="pstyle2">014-112B&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td>
 <td class="pstyle2">30&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
@@ -1600,9 +1600,9 @@
 <td class="pstyle2">대학국어&nbsp;</td>
 <td class="pstyle2">교양&nbsp;</td>
 <td class="pstyle2">3-2-2&nbsp;</td>
-<td class="pstyle2">목&nbsp;4.5,5.5&nbsp;</td>
+<td class="pstyle2">수&nbsp;1,2&nbsp;</td>
 <td class="pstyle2">실험반1&nbsp;</td>
-<td class="pstyle2">220-201&nbsp;</td>
+<td class="pstyle2">014-112B&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td>
 <td class="pstyle2">30&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
