--- a/data/htm/2013_1_normal_art.htm
+++ b/data/htm/2013_1_normal_art.htm
@@ -718,7 +718,7 @@
 <td class="pstyle2">2-2-0&nbsp;</td>
 <td class="pstyle2">화&nbsp;5,6&nbsp;</td>
 <td class="pstyle2">이론&nbsp;</td>
-<td class="pstyle2">008-101&nbsp;</td>
+<td class="pstyle2">43-1-401&nbsp;</td>
 <td class="pstyle2">주명진&nbsp;</td>
 <td class="pstyle2">80&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
