--- a/data/htm/2013_1_normal_foreign.htm
+++ b/data/htm/2013_1_normal_foreign.htm
@@ -209,9 +209,9 @@
 <td class="pstyle2">프랑스어권 문화의 이해&nbsp;</td>
 <td class="pstyle2">교양&nbsp;</td>
 <td class="pstyle2">3-3-0&nbsp;</td>
-<td class="pstyle2">화&nbsp;1.5-1.5&nbsp;</td>
+<td class="pstyle2">월&nbsp;7.5-1.5&nbsp;</td>
 <td class="pstyle2">이론&nbsp;</td>
-<td class="pstyle2">006-108&nbsp;</td>
+<td class="pstyle2">008-304&nbsp;</td>
 <td class="pstyle2">김혜중&nbsp;</td>
 <td class="pstyle2">40&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
@@ -222,9 +222,9 @@
 <td class="pstyle2">프랑스어권 문화의 이해&nbsp;</td>
 <td class="pstyle2">교양&nbsp;</td>
 <td class="pstyle2">3-3-0&nbsp;</td>
-<td class="pstyle2">목&nbsp;1.5-1.5&nbsp;</td>
+<td class="pstyle2">수&nbsp;7.5-1.5&nbsp;</td>
 <td class="pstyle2">이론&nbsp;</td>
-<td class="pstyle2">006-108&nbsp;</td>
+<td class="pstyle2">008-304&nbsp;</td>
 <td class="pstyle2">김혜중&nbsp;</td>
 <td class="pstyle2">40&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
