수강편람 업데이트 2013-1

--- a/data/htm/2013_1_normal_art.htm
+++ b/data/htm/2013_1_normal_art.htm
@@ -976,9 +976,9 @@
 <td class="pstyle2">소그룹 고전원전읽기 1&nbsp;</td>
 <td class="pstyle2">교양&nbsp;</td>
 <td class="pstyle2">1-2-0&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;&nbsp;&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;</td>
-<td class="pstyle2">-&nbsp;</td>
+<td class="pstyle2">화&nbsp;7.5,8.5&nbsp;</td>
+<td class="pstyle2">이론&nbsp;</td>
+<td class="pstyle2">003-205&nbsp;</td>
 <td class="pstyle2">김창민&nbsp;</td>
 <td class="pstyle2">5&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
@@ -989,9 +989,9 @@
 <td class="pstyle2">소그룹 고전원전읽기 1&nbsp;</td>
 <td class="pstyle2">교양&nbsp;</td>
 <td class="pstyle2">1-2-0&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;&nbsp;&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;</td>
-<td class="pstyle2">-&nbsp;</td>
+<td class="pstyle2">화&nbsp;11,12&nbsp;</td>
+<td class="pstyle2">이론&nbsp;</td>
+<td class="pstyle2">007-315&nbsp;</td>
 <td class="pstyle2">박찬국&nbsp;</td>
 <td class="pstyle2">7&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
@@ -1002,9 +1002,9 @@
 <td class="pstyle2">소그룹 고전원전읽기 1&nbsp;</td>
 <td class="pstyle2">교양&nbsp;</td>
 <td class="pstyle2">1-2-0&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;&nbsp;&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;</td>
-<td class="pstyle2">-&nbsp;</td>
+<td class="pstyle2">목&nbsp;10,11&nbsp;</td>
+<td class="pstyle2">이론&nbsp;</td>
+<td class="pstyle2">007-315&nbsp;</td>
 <td class="pstyle2">이남인&nbsp;</td>
 <td class="pstyle2">10&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
@@ -1054,9 +1054,9 @@
 <td class="pstyle2">소그룹 고전원전읽기 2&nbsp;</td>
 <td class="pstyle2">교양&nbsp;</td>
 <td class="pstyle2">1-2-0&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;&nbsp;&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;</td>
-<td class="pstyle2">-&nbsp;</td>
+<td class="pstyle2">화&nbsp;10,9&nbsp;</td>
+<td class="pstyle2">이론&nbsp;</td>
+<td class="pstyle2">001-103&nbsp;</td>
 <td class="pstyle2">이종묵&nbsp;</td>
 <td class="pstyle2">10&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
@@ -1067,9 +1067,9 @@
 <td class="pstyle2">소그룹 고전원전읽기 2&nbsp;</td>
 <td class="pstyle2">교양&nbsp;</td>
 <td class="pstyle2">1-2-0&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;&nbsp;&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;</td>
-<td class="pstyle2">-&nbsp;</td>
+<td class="pstyle2">수&nbsp;10.5,11.5&nbsp;</td>
+<td class="pstyle2">이론&nbsp;</td>
+<td class="pstyle2">001-210&nbsp;</td>
 <td class="pstyle2">방민호&nbsp;</td>
 <td class="pstyle2">10&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
@@ -1145,9 +1145,9 @@
 <td class="pstyle2">소그룹 고전원전읽기 2&nbsp;</td>
 <td class="pstyle2">교양&nbsp;</td>
 <td class="pstyle2">1-2-0&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;&nbsp;&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;</td>
-<td class="pstyle2">-&nbsp;</td>
+<td class="pstyle2">금&nbsp;2,3&nbsp;</td>
+<td class="pstyle2">이론&nbsp;</td>
+<td class="pstyle2">003-205&nbsp;</td>
 <td class="pstyle2">Maria Claudia Macias Rodriguez&nbsp;</td>
 <td class="pstyle2">5&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
@@ -1171,9 +1171,9 @@
 <td class="pstyle2">소그룹 고전원전읽기 2&nbsp;</td>
 <td class="pstyle2">교양&nbsp;</td>
 <td class="pstyle2">1-2-0&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;&nbsp;&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;</td>
-<td class="pstyle2">-&nbsp;</td>
+<td class="pstyle2">월&nbsp;8,9&nbsp;</td>
+<td class="pstyle2">이론&nbsp;</td>
+<td class="pstyle2">007-205&nbsp;</td>
 <td class="pstyle2">김병준&nbsp;</td>
 <td class="pstyle2">10&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
